k8s-infra/platform-stack/ingress/ingress-monitoring-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd1-monitoring-ns
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: monitoringgrafanahimanshu324.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-stack-grafana
            port:
              number: 80
